base/application/plant-simulator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plant-simulator-service
  namespace: plant-simulator-ns
  labels:
    name: plant-simulator-service
spec:
  ports:
    - port: 9000 
      nodePort: 31002
      targetPort: 9000 
      protocol: TCP
      name: plant-simulator-service-port
  selector:
    app: plant-simulator
  # type: NodePort
