base/application/plant-simulator-ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: plant-simulator-ingress
  namespace: plant-simulator-ns
  annotations:
    ingress.kubernetes.io/enable-cors: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    prometheus.io/scrape: 'true'
    prometheus.io/path:   /metrics
    prometheus.io/port:   '80'
spec:
  rules:
    - host: grafana.local
      http:
        paths: 
          - backend: 
              serviceName: grafana-ip-service
              servicePort: 8080

    - host: prometheus.local
      http:
        paths: 
          - backend: 
              serviceName: prometheus-ip-service
              servicePort: 8080 

    - host: plant-simulator.local
      http:
        paths:
          - backend: 
              serviceName: plant-simulator-service
              servicePort: 9000
